--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "documentation",
-  "version": "0.0.0",
+  "name": "coollabs-documentation",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
