--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "coollabs-documentation",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev":"docusaurus start",
+    "dev": "docusaurus start",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -15,13 +15,13 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.17",
-    "@docusaurus/preset-classic": "2.0.0-beta.17",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
-    "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@docusaurus/core": "2.0.0-beta.18",
+    "@docusaurus/preset-classic": "2.0.0-beta.18",
+    "@mdx-js/react": "1.6.22",
+    "clsx": "1.1.1",
+    "prism-react-renderer": "1.3.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "browserslist": {
     "production": [
@@ -36,8 +36,11 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23"
+    "@algolia/client-search": "4.13.0",
+    "@types/react": "17.0.39",
+    "autoprefixer": "10.4.2",
+    "postcss": "8.4.7",
+    "tailwindcss": "3.0.23",
+    "typescript": "4.6.3"
   }
 }
