--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "coollabs-documentation",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vitepress dev docs",
-    "build": "vitepress build docs",
-    "serve": "vitepress serve docs"
+    "dev": "vitepress dev",
+    "build": "vitepress build",
+    "preview": "vitepress preview"
   },
   "repository": "https://github.com/coollabsio/documentation.git",
   "author": "Andras Bacsai <andras.bacsai@gmail.com>",
   "license": "Apache",
   "devDependencies": {
-    "vitepress": "1.0.0-alpha.29",
+    "vitepress": "1.0.0-alpha.64",
     "vue": "3.2.45"
   },
   "pnpm": {
