--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vitepress dev",
-    "build": "vitepress build",
+    "build": "vitepress build --mpa",
     "preview": "vitepress preview"
   },
   "repository": "https://github.com/coollabsio/documentation.git",
