--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "vitepress preview"
   },
   "repository": "https://github.com/coollabsio/documentation.git",
-  "license": "Apache",
+  "license": "MIT",
   "devDependencies": {
     "vitepress": "1.0.0-beta.5",
     "vue": "3.2.45"
